// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderListDropZone should match if drag enter and is dragging 1`] = `
<div class="drop-zone drag-over dragging">
  <!--v-if-->
</div>
`;

exports[`FinderListDropZone should match if drag enter and not dragging 1`] = `
<div class="drop-zone">
  <!--v-if-->
</div>
`;

exports[`FinderListDropZone should match if drag leave and is dragging 1`] = `
<div class="drop-zone dragging">
  <!--v-if-->
</div>
`;

exports[`FinderListDropZone should match if drag leave and not dragging 1`] = `
<div class="drop-zone">
  <!--v-if-->
</div>
`;

exports[`FinderListDropZone should match snapshot 1`] = `
<div class="drop-zone">
  <!--v-if-->
</div>
`;
